--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <script type="text/template" id="asset-template">
     <li>
-      <span class="tag"><%= id %></span>&nbsp;-&nbsp;
+      <span class="tag"><%= tag %></span>&nbsp;-&nbsp;
       <span class="desc"><%= desc %></span>
       <div class="asset-signer"></div>
       <button class="control return">Return</button>
