--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <title>Newsroom Equipment Signout</title>
 
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 
   <!--[if IE]>
@@ -14,24 +15,39 @@
   <![endif]-->
 
   <script src="js/lib/jquery-1.8.1.min.js" type="text/javascript"></script>
+  <script src="js/lib/bootstrap.min.js" type="text/javascript"></script>
+
   <script src="js/lib/underscore-min.js" type="text/javascript"></script>
   <script src="js/lib/backbone-min.js" type="text/javascript"></script>
-  <script src="js/lib/backbone.localStorage-min.js" type="text/javascript"></script>
 
   <script src="js/app.js" type="text/javascript"></script>
 
   <script type="text/template" id="page-template">
-    <h1><%= title %></h1>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="#"><%= title %></a>
+          <ul class="nav">
+            <li><a href="#/">Home</a></li>
+            <li><a href="#/assets">Manage Assets</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <header class="lead container"><%= page %></header>
     <div class="message"></div>
-    <div class="<%= type %>-list"></div>
+    <div id="<%= type %>-list" class="container">
+    </div>
   </script>
 
   <script type="text/template" id="asset-template">
     <li>
-      <span class="tag"><%= tag %></span>&nbsp;-&nbsp;
-      <span class="desc"><%= desc %></span>
-      <div class="asset-signer"></div>
-      <button class="control return">Return</button>
+      <dl class="dl-horizontal"><dt class="tag"><%= tag %></dt>
+      <dd>
+        <span class="desc"><%= desc %></span>
+        <div class="asset-signer"></div>
+        <button type="submit" class="btn btn-primary">Return It!</button>
+      </dd></dl>
     </li>
   </script>
 
@@ -41,21 +57,21 @@
   </script>
 
   <script type="text/template" id="signer-template">
-    // need to put signer toggle states here - 
-    // input for signer which toggles to span with name
-    // on enter keypress or leave focus
+    <input class="input-medium" id="appendedInputButton" type="text" placeholder="Type your name...">
+    <button type="submit" class="btn">Sign Out</button>
   </script>
 
-  <script type="text/template" id="message-template">
-    <%= signer %> has signed out <%= asset %> at <%= timestamp %>.
+  <script type="text/template" id="out-template">
+    <div class="alert alert-info"><%= user %> has signed out <%= tag %> at <%= out %>.</div>
+  </script>
+
+  <script type="text/template" id="in-template">
+    <div class="alert alert-info"><%= user %> has signed in <%= tag %> at <%= in %>.</div>
   </script>
 
   <script type="text/template" id="">
   </script>
-
 </head>
 <body>
-  <div id="container">
-  </div>
 </body>
 </html>
