--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="js/lib/jquery-1.8.1.min.js" type="text/javascript"></script>
   <script src="js/lib/bootstrap.min.js" type="text/javascript"></script>
 
-  <script src="js/lib/underscore-min.js" type="text/javascript"></script>
+  <script src="js/lib/lodash.min.js" type="text/javascript"></script>
   <script src="js/lib/backbone-min.js" type="text/javascript"></script>
 
   <script src="js/app.js" type="text/javascript"></script>
@@ -26,10 +26,10 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#"><%= title %></a>
+          <span class="brand"><%= title %></span>
           <ul class="nav">
-            <li><a href="#/">Home</a></li>
-            <li><a href="#/assets">Manage Assets</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#assets">Manage Assets</a></li>
           </ul>
         </div>
       </div>
